<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg2"
    tools:context=".nonmember.SplitNonmember">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/faster_one"
        android:text="@string/fastfuel"
        android:textColor="#FFEB3B"
        android:textSize="24sp"
        android:layout_marginTop="60dp"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:layout_centerHorizontal="true"
        android:fontFamily="sans-serif-medium"
        android:text="@string/choose_your_preference"
        android:textColor="#FFFFFF"
        android:textSize="15sp" />

    <Button
        android:id="@+id/btnGeneral"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/general"
        android:layout_centerVertical="true"
        android:layout_marginLeft="50dp"
        android:layout_marginStart="50dp" />
    <Button
        android:id="@+id/btnEmergency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/emergency"
        android:layout_centerVertical="true"
        android:layout_marginLeft="250dp"
        android:layout_marginStart="250dp" />

</RelativeLayout>